<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateUtxoActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/create_utxo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/gen_utxo"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    backspace 추후 더 고민해보고 배치하기-->
<!--    <androidx.appcompat.widget.AppCompatImageButton-->
<!--        android:id="@+id/btnBack_gen_utxo"-->
<!--        android:layout_width="30dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:layout_marginStart="20dp"-->
<!--        android:background="@color/white"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:srcCompat="@drawable/backspace" />-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@color/primary_50"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/create_utxo_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="30dp"
            android:text="@string/gen_utxo_info"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coin_input"
            android:textSize="18sp"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/input_coin"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:hint="@string/coin_hint"
            android:inputType="number"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGenNonBase"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@color/primary_200"
            android:text="@string/generate"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGoMain"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/primary_200"
            android:text="@string/go_main_page"
            android:textSize="18sp"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>