<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/login"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:paddingTop="50dp"
        android:paddingBottom="20dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@color/primary_50"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/email_id"
                android:textSize="16sp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_email_login"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/passwd"
                android:textSize="16sp"/>
            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/input_passwd_login"
                android:layout_width="320dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="center"
            android:background="@color/primary_200"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:text="@string/login_to_signup1"
            android:textSize="16sp"
            android:textColor="@color/gray_700"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/login_to_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_gravity="center"
            android:text="@string/login_to_signup2"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/gray_700"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>